src/main/java/io/github/jhipster/sample/web/rest/errors/package-info.java
/**
 * Rest layer error handling.
 */
package io.github.jhipster.sample.web.rest.errors;
